@@ -1,10 +1,12 @@
 package com.example.safespace_back;
 
+import com.example.safespace_back.dto.in.DailyMoodRequestDTO;
 import com.example.safespace_back.dto.in.RegisterPsychologistRequestDTO;
 import com.example.safespace_back.dto.in.RegisterStudentRequestDTO;
 import com.example.safespace_back.model.*;
 import com.example.safespace_back.repository.*;
 import com.example.safespace_back.service.AuthService;
+import com.example.safespace_back.service.DailyMoodService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
@@ -14,6 +16,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.ThreadLocalRandom;
 
 @Component
 @RequiredArgsConstructor
@@ -24,7 +27,9 @@ public class DataInitializer implements CommandLineRunner {
     private final AuthService authService;
     private final UserRepository userRepository;
     private final DailyMoodRepository dailyMoodRepository;
+    private final DailyMoodService dailyMoodService;
     private final DigitalResourcesRepository digitalResourcesRepository;
+    private final SentenceRepository sentenceRepository;
 
     @Override
     @Transactional
@@ -35,46 +40,31 @@ public class DataInitializer implements CommandLineRunner {
         }
 
         if (facultyRepository.findAll().isEmpty()) {
-            facultyRepository.save(new FacultyEntity(null, "Facultad de Ingeniería de Sistemas e Informática"));
-            facultyRepository.save(new FacultyEntity(null, "Facultad de Ingeniería Industriale"));
-            facultyRepository.save(new FacultyEntity(null, "Facultad de Ciencias Físicas"));
+            facultyRepository.saveAll(List.of(
+                FacultyEntity.builder().name("Facultad de Ingeniería Mecánica").build(),
+                FacultyEntity.builder().name("Facultad de Ingeniería Electrónica").build(),
+                FacultyEntity.builder().name("Facultad de Ingeniería Civil").build(),
+                FacultyEntity.builder().name("Facultad de Ingeniería Química").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Matemáticas").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Biológicas").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Sociales").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Económicas").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Administrativas").build(),
+                FacultyEntity.builder().name("Facultad de Ciencias Contables").build(),
+                FacultyEntity.builder().name("Facultad de Derecho y Ciencias Políticas").build(),
+                FacultyEntity.builder().name("Facultad de Medicina").build(),
+                FacultyEntity.builder().name("Facultad de Odontología").build(),
+                FacultyEntity.builder().name("Facultad de Farmacia y Bioquímica").build(),
+                FacultyEntity.builder().name("Facultad de Psicología").build(),
+                FacultyEntity.builder().name("Facultad de Educación").build(),
+                FacultyEntity.builder().name("Facultad de Arquitectura, Urbanismo y Artes").build(),
+                FacultyEntity.builder().name("Facultad de Letras y Ciencias Humanas").build()
+            ));
         }
 
         List<FacultyEntity> faculties = facultyRepository.findAll();
 
         if (userRepository.findAll().isEmpty()) {
-            authService.registerStudent(
-                 new RegisterStudentRequestDTO(
-                    "jhondoe",
-                    "123456",
-                    "Jhon",
-                    "Doe",
-                    LocalDate.parse("2001-11-06"),
-                    faculties.get(1).getId()
-                )
-            );
-            authService.registerStudent(
-                new RegisterStudentRequestDTO(
-                    "janedoe",
-                    "123456",
-                    "Jane",
-                    "Doe",
-                    LocalDate.parse("2000-03-15"),
-                    faculties.get(2).getId()
-                )
-            );
-
-            authService.registerStudent(
-                new RegisterStudentRequestDTO(
-                    "mikebrown",
-                    "123456",
-                    "Mike",
-                    "Brown",
-                    LocalDate.parse("1999-07-22"),
-                    faculties.get(0).getId()
-                )
-            );
-
             authService.registerPsychologist(
                 new RegisterPsychologistRequestDTO(
                     "mindcoach",
@@ -98,20 +88,53 @@ public class DataInitializer implements CommandLineRunner {
                     "Psicólogo Educativo"
                 )
             );
+
+            authService.registerStudent(
+                new RegisterStudentRequestDTO(
+                    "jhondoe",
+                    "123456",
+                    "Jhon",
+                    "Doe",
+                    LocalDate.parse("2001-11-06"),
+                    faculties.get(ThreadLocalRandom.current().nextInt(faculties.size())).getId()
+                )
+            );
+            authService.registerStudent(
+                new RegisterStudentRequestDTO(
+                    "janedoe",
+                    "123456",
+                    "Jane",
+                    "Doe",
+                    LocalDate.parse("2000-03-15"),
+                    faculties.get(ThreadLocalRandom.current().nextInt(faculties.size())).getId()
+                )
+            );
+
+            authService.registerStudent(
+                new RegisterStudentRequestDTO(
+                    "mikebrown",
+                    "123456",
+                    "Mike",
+                    "Brown",
+                    LocalDate.parse("1999-07-22"),
+                    faculties.get(ThreadLocalRandom.current().nextInt(faculties.size())).getId()
+                )
+            );
         }
 
         if (moodRepository.findAll().isEmpty()) {
             moodRepository.saveAll(List.of(
-                MoodEntity.builder().name("muy triste").icon("😭").build(),
-                MoodEntity.builder().name("triste").icon("😢").build(),
-                MoodEntity.builder().name("cansado").icon("😩").build(),
-                MoodEntity.builder().name("estresado").icon("😣").build(),
-                MoodEntity.builder().name("neutral").icon("😐").build(),
-                MoodEntity.builder().name("relajado").icon("😌").build(),
-                MoodEntity.builder().name("feliz").icon("😊").build(),
-                MoodEntity.builder().name("muy feliz").icon("😁").build(),
-                MoodEntity.builder().name("emocionado").icon("🤩").build(),
-                MoodEntity.builder().name("orgulloso").icon("😎").build()
+                MoodEntity.builder().name("Muy triste").icon("😭").build(),
+                MoodEntity.builder().name("Triste").icon("🥺").build(),
+                MoodEntity.builder().name("Cansado").icon("😮‍💨").build(),
+                MoodEntity.builder().name("Estresado").icon("😫").build(),
+                MoodEntity.builder().name("Neutral").icon("😐").build(),
+                MoodEntity.builder().name("Relajado").icon("😌").build(),
+                MoodEntity.builder().name("Feliz").icon("😊").build(),
+                MoodEntity.builder().name("Muy feliz").icon("😄").build(),
+                MoodEntity.builder().name("Emocionado").icon("🤩").build(),
+                MoodEntity.builder().name("Orgulloso").icon("😎").build()
+
             ));
         }
 
@@ -121,13 +144,120 @@ public class DataInitializer implements CommandLineRunner {
             .map(u -> (StudentEntity) u)
             .toList();
 
+        List<PsychologistEntity> psychologists = userRepository.findAll().stream()
+            .filter(u -> u.getRole().getRole().name().equals("PSYCHOLOGIST"))
+            .map(u -> (PsychologistEntity) u)
+            .toList();
 
         if (dailyMoodRepository.findAll().isEmpty()) {
-            dailyMoodRepository.saveAll(
-                List.of(
-                    DailyMoodEntity.builder().createdAt(LocalDateTime.now()).description("ASDASDASD").student(students.get(0)).moods(Set.of(moods.get(0), moods.get(2))).build()
-                )
+            dailyMoodService.registerDailyMoodToday(
+                new DailyMoodRequestDTO(
+                    List.of(1L), // Muy triste 😭
+                    "Ha sido un día difícil, me siento desanimado."
+                ),
+                LocalDateTime.now().minusDays(4),
+                students.getFirst()
             );
+
+            dailyMoodService.registerDailyMoodToday(
+                new DailyMoodRequestDTO(
+                    List.of(2L, 3L), // Triste 🥺 + Cansado 😮‍💨
+                    "Un poco triste y agotado, fue pesado en clases."
+                ),
+                LocalDateTime.now().minusDays(3),
+                students.getFirst()
+            );
+
+            dailyMoodService.registerDailyMoodToday(
+                new DailyMoodRequestDTO(
+                    List.of(5L), // Neutral 😐
+                    "Día normal, nada especial."
+                ),
+                LocalDateTime.now().minusDays(2),
+                students.getFirst()
+            );
+
+            dailyMoodService.registerDailyMoodToday(
+                new DailyMoodRequestDTO(
+                    List.of(7L, 9L), // Feliz 😊 + Emocionado 🤩
+                    "Me fue bien en mis trabajos y estoy motivado."
+                ),
+                LocalDateTime.now().minusDays(1),
+                students.getFirst()
+            );
+
+//            dailyMoodService.registerDailyMoodToday(
+//                new DailyMoodRequestDTO(
+//                    List.of(10L), // Orgulloso 😎
+//                    "Logré completar un proyecto importante, me siento orgulloso."
+//                ),
+//                LocalDateTime.now(),
+//                students.getFirst()
+//            );
+
+            // Other students
+            dailyMoodService.registerDailyMoodToday(
+                new DailyMoodRequestDTO(
+                    List.of(1L), // Muy triste 😭
+                    "Ha sido un día difícil, me siento desanimado."
+                ),
+                LocalDateTime.now().minusDays(4),
+                students.get(2)
+            );
+        }
+
+        if (sentenceRepository.findAll().isEmpty()) {
+            sentenceRepository.saveAll(List.of(
+                SentenceEntity.builder()
+                    .content("No puedes cambiar lo que te ocurre, pero sí puedes cambiar la manera en que respondes.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("Eres más fuerte de lo que piensas y más capaz de lo que imaginas.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("Cada pequeño paso hacia adelante es un avance, aunque no lo parezca.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("No te juzgues por tus caídas, sino por las veces que decides levantarte.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("Tu bienestar empieza cuando decides escucharte y cuidarte.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("Permítete sentir, porque sentir también es avanzar.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("No tienes que poder con todo; solo con lo que toca hoy.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("Lo que hoy te pesa, mañana puede convertirse en tu mayor aprendizaje.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("El progreso no siempre es visible, pero siempre existe cuando sigues intentándolo.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build(),
+
+                SentenceEntity.builder()
+                    .content("No eres el mismo de ayer: has crecido, aprendido y avanzado más de lo que notas.")
+                    .psychologist(psychologists.get(ThreadLocalRandom.current().nextInt(psychologists.size())))
+                    .build()
+            ));
         }
 
         if (digitalResourcesRepository.findAll().isEmpty()) {
@@ -136,14 +266,14 @@ public class DataInitializer implements CommandLineRunner {
             resource1.setDescription("Aprende ejercicios simples de respiración que te ayudarán a manejar momentos de ansiedad.");
             resource1.setCategory(CategoryDigitalResource.ANSIEDAD);
             resource1.setType(TypeDigitalResource.ARTICLE);
-            resource1.setLink("https://ejemplo.com/tecnicas-respiracion");
+            resource1.setLink("https://www.youtube.com/watch?v=I5tip6L5fOQ");
 
             DigitalResourcesEntity resource2 = new DigitalResourcesEntity();
             resource2.setTitle("Mindfulness para estudiantes");
             resource2.setDescription("Video guiado de meditación diseñado especialmente para el estrés académico.");
             resource2.setCategory(CategoryDigitalResource.MINDFULNESS);
             resource2.setType(TypeDigitalResource.VIDEO);
-            resource2.setLink("https://ejemplo.com/mindfulness-estudiantes");
+            resource2.setLink("https://www.youtube.com/watch?v=IShkpOm63gg");
 
             DigitalResourcesEntity resource3 = new DigitalResourcesEntity();
             resource3.setTitle("Guía de manejo del estrés");
